--- a/星辰抽獎系統2.0.html
+++ b/星辰抽獎系統2.0.html
@@ -135,7 +135,7 @@
 
     <div class="lottery-container">
         <header>
-            <h1>星辰抽獎系統</h1>
+            <h1>星辰抽獎系統2.0</h1>
             <p>公平、公正、公開 不重複</p>
         </header>
 
@@ -269,3 +269,4 @@
     </script>
 </body>
 </html>
+
