--- a/星辰抽獎系統2.0.html
+++ b/星辰抽獎系統2.0.html
@@ -136,7 +136,7 @@
     <div class="lottery-container">
         <header>
             <h1>星辰抽獎系統</h1>
-            <p>v2.0 公平、公正、公開 不重複</p>
+            <p>v2.0 -公平、公正、公開 不重複</p>
         </header>
 
         <main>
@@ -269,5 +269,6 @@
     </script>
 </body>
 </html>
+
 
 
