Upgrade 星辰抽獎系統 to version 2.0
Updated the lottery system to version 2.0 with improved UI and functionality.

--- a/星辰抽獎系統 單人版2.0.html
+++ b/星辰抽獎系統 單人版2.0.html
@@ -136,7 +136,7 @@
     <div class="lottery-container">
         <header>
             <h1>星辰抽獎系統</h1>
-            <p>v2.0 -公平、公正、公開 不重複</p>
+            <p>v2.0 - 公平、公正、公開 單人版 </p>
         </header>
 
         <main>
@@ -269,6 +269,7 @@
     </script>
 </body>
 </html>
+
 
 
 
